--- a/documentation/trql.activity.class.php.html
+++ b/documentation/trql.activity.class.php.html
@@ -15,25 +15,19 @@ table.properties tr.property td.description { width: 60%; }
 
 <div class="trql_documentor_DocumentorSourceFile">
 <section class="header">
-<span class="DocumentorLabel">Filename: </span><span class="property filename">trql.addaction.class.php</span>
-<span class="DocumentorLabel">Purpose: </span><span class="property purpose">The act of editing by adding an object to a collection.</span>
+<span class="DocumentorLabel">Filename: </span><span class="property filename">trql.activity.class.php</span>
+<span class="DocumentorLabel">Purpose: </span><span class="property purpose">Event; actions that result in changes of state.</span>
 <span class="DocumentorLabel">Author: </span><span class="property author">Pat Y. Boens</span>
 <span class="DocumentorLabel">Company: </span><span class="property company">Lato Sensu Management<br />Rue du Bois des Mazuis, 47<br />5070 Vitrival<br />Belgium<br /><a href="https://www.latosensu.be" class="DocumentorLink" title="Go to https://www.latosensu.be" itemprop="url">https://www.latosensu.be</a> (geonames: <a href="http://api.geonames.org/get?geonameId=8520400&username=demo&style=full" class="DocumentorLink" title="Go to http://api.geonames.org/get?geonameId=8520400&username=demo&style=full" itemprop="url">http://api.geonames.org/get?geonameId=8520400&username=demo&style=full</a>)<br />Vae Soli!: <a href="http://www.vaesoli.com" class="DocumentorLink" title="Go to http://www.vaesoli.com" itemprop="url">http://www.vaesoli.com</a><br /></span>
-<span class="DocumentorLabel">Creation date: </span><span class="property cdate">26-08-2020 08:55</span>
-<span class="DocumentorLabel">Last modification date: </span><span class="property mdate">27/02/2021 - 20:36:53</span>
+<span class="DocumentorLabel">Creation date: </span><span class="property cdate">10-01-21 12:30</span>
+<span class="DocumentorLabel">Last modification date: </span><span class="property mdate">10/01/2021 - 11:34:23</span>
 <span class="DocumentorLabel">License/Copyrights: </span><span class="property license">Intellectual Property belongs to Pat Y. Boens. You are free to:<br /><strong>Share</strong> — copy and redistribute the material in any medium or format<br /><strong>Adapt</strong> — remix, transform, and build upon the material for any purpose, even commercially.<br />Under the following terms:<br /><strong>Attribution</strong> — You must give appropriate credit, provide a link to the license, and indicate if changes were made. You may do so in any reasonable manner, but not in any way that suggests the licensor endorses you or your use.<br /><strong>No additional restrictions</strong> — You may not apply legal terms or technological measures that legally restrict others from doing anything the license permits.<br /><br /><a href="https://creativecommons.org/licenses/by/4.0/legalcode" class="DocumentorLink" title="Go to https://creativecommons.org/licenses/by/4.0/legalcode" itemprop="url">https://creativecommons.org/licenses/by/4.0/legalcode</a></span>
 </section> <!-- .header -->
 <section class="classes">
 <section class="class shadow">
-<span class="DocumentorLabel">Class: </span><span class="property classname"><code>AddAction</code></span>
-<span class="DocumentorLabel">Description: </span><span class="property description">The act of editing by adding an object to a collection.</span>
-<span class="DocumentorLabel">Declaration: </span><span class="property declaration"><code>class AddAction extends UpdateAction</code></span>
-<span class="DocumentorLabel">Credits: </span><span class="property credits">The whole concept is derived from the fabulous work of Schema.org
-        under the terms of their license:
-        <a href="http://schema.org/docs/terms.html" class="DocumentorLink" title="Go to http://schema.org/docs/terms.html" itemprop="url">http://schema.org/docs/terms.html</a></span>
-<span class="DocumentorLabel">Doc: </span><span class="property doc"><a href="http://schema.org/AddAction" class="DocumentorLink" title="Go to http://schema.org/AddAction" itemprop="url">http://schema.org/AddAction</a></span>
-<span class="DocumentorLabel">Warning: </span><span class="property warning">This class has been generated automatically by <code>trql.schemaclassgenerator.class.php</code>
-        on 26-08-2020 08:55. IT HAS NOT BEEN TESTED YET!</span>
+<span class="DocumentorLabel">Class: </span><span class="property classname"><code>Activity</code></span>
+<span class="DocumentorLabel">Description: </span><span class="property description">Event; actions that result in changes of state.</span>
+<span class="DocumentorLabel">Declaration: </span><span class="property declaration"><code>class Activity extends Action</code></span>
 <span class="DocumentorLabel">Properties: </span>
 <table class="properties">
 <thead>
@@ -49,18 +43,14 @@ table.properties tr.property td.description { width: 60%; }
 <td class="description">Fixed 'class' information.</td>
 </tr>
 <tr class="property">
-<td class="name"><code>$targetCollection</code></td>
-<td class="type"><code>Thing</code></td>
-<td class="description">A sub property of object. The collection target of the action.</td>
-</tr>
-<tr class="property">
 <td class="name"><code>$wikidataId</code></td>
 <td class="type"><code>string</code></td>
-<td class="description">Wikidata ID. No equivalent.</td>
+<td class="description">Event; actions that result in changes of state.</td>
 </tr>
 </table>
 <span class="DocumentorLabel">Methods: </span>
 <span class="property func"><code>__construct()</code></span>, 
+<span class="property func"><code>__toXML()</code></span>, 
 <span class="property func"><code>__destruct()</code></span></section> <!-- .class -->
 </section> <!-- .classes -->
 </div> <!-- End of trql_documentor_DocumentorSourceFile-->
