--- a/documentation/trql.analysisnewsarticle.class.php.html
+++ b/documentation/trql.analysisnewsarticle.class.php.html
@@ -6,7 +6,7 @@ code, .filename { color: crimson; font-family: Consolas,"courier new" }
 .DocumentorLabel { font-style: italic; display: block;}
 section.class { margin: 1em 1em; padding: 1em; border: 1px solid #000; background: #eee9; }
 .shadow { box-shadow: 0 20px 15px -15px rgba(0,0,0,.5); }
-table.properties { border:1px solid silver; border-collapse: collapse; }
+table.properties { border:1px solid silver; border-collapse: collapse; width:100%; }
 table.properties thead th { border:1px solid silver;padding: .5em; width:20%; }
 table.properties thead th.description { width:60%; }
 table.properties tr.property td { border:1px solid silver;padding: .5em; width:20%; }
@@ -22,7 +22,7 @@ table.properties tr.property td.description { width: 60%; }
 <span class="DocumentorLabel">Author: </span><span class="property author">Pat Y. Boens</span>
 <span class="DocumentorLabel">Company: </span><span class="property company">Lato Sensu Management<br />Rue du Bois des Mazuis, 47<br />5070 Vitrival<br />Belgium<br /><a href="https://www.latosensu.be" class="DocumentorLink" title="Go to https://www.latosensu.be" itemprop="url">https://www.latosensu.be</a> (geonames: <a href="http://api.geonames.org/get?geonameId=8520400&username=demo&style=full" class="DocumentorLink" title="Go to http://api.geonames.org/get?geonameId=8520400&username=demo&style=full" itemprop="url">http://api.geonames.org/get?geonameId=8520400&username=demo&style=full</a>)<br />Vae Soli!: <a href="http://www.vaesoli.com" class="DocumentorLink" title="Go to http://www.vaesoli.com" itemprop="url">http://www.vaesoli.com</a><br /></span>
 <span class="DocumentorLabel">Creation date: </span><span class="property cdate">26-08-2020 16:23</span>
-<span class="DocumentorLabel">Last modification date: </span><span class="property mdate">26/08/2020 - 14:25:45</span>
+<span class="DocumentorLabel">Last modification date: </span><span class="property mdate">27/02/2021 - 21:15:31</span>
 <span class="DocumentorLabel">License/Copyrights: </span><span class="property license">Intellectual Property belongs to Pat Y. Boens. You are free to:<br /><strong>Share</strong> — copy and redistribute the material in any medium or format<br /><strong>Adapt</strong> — remix, transform, and build upon the material for any purpose, even commercially.<br />Under the following terms:<br /><strong>Attribution</strong> — You must give appropriate credit, provide a link to the license, and indicate if changes were made. You may do so in any reasonable manner, but not in any way that suggests the licensor endorses you or your use.<br /><strong>No additional restrictions</strong> — You may not apply legal terms or technological measures that legally restrict others from doing anything the license permits.<br /><br /><a href="https://creativecommons.org/licenses/by/4.0/legalcode" class="DocumentorLink" title="Go to https://creativecommons.org/licenses/by/4.0/legalcode" itemprop="url">https://creativecommons.org/licenses/by/4.0/legalcode</a></span>
 </section> <!-- .header -->
 <section class="classes">
@@ -37,7 +37,7 @@ table.properties tr.property td.description { width: 60%; }
         <a href="http://schema.org/docs/terms.html" class="DocumentorLink" title="Go to http://schema.org/docs/terms.html" itemprop="url">http://schema.org/docs/terms.html</a></span>
 <span class="DocumentorLabel">Doc: </span><span class="property doc"><a href="http://schema.org/AnalysisNewsArticle" class="DocumentorLink" title="Go to http://schema.org/AnalysisNewsArticle" itemprop="url">http://schema.org/AnalysisNewsArticle</a></span>
 <span class="DocumentorLabel">Warning: </span><span class="property warning">This class has been generated automatically by <code>trql.schemaclassgenerator.class.php</code>
-        on 26-08-2020 16:23. IT HAS NOT BEEN TESTED YET!</span>
+        on 26-08-2020 16:23.</span>
 <span class="DocumentorLabel">Properties: </span>
 <table class="properties">
 <thead>
@@ -53,44 +53,9 @@ table.properties tr.property td.description { width: 60%; }
 <td class="description">Fixed 'class' information.</td>
 </tr>
 <tr class="property">
-<td class="name"><code>$dateline</code></td>
+<td class="name"><code>$wikidataId</code></td>
 <td class="type"><code>string</code></td>
-<td class="description">A dateline is a brief piece of text included in news articles that
-                                                                                                                                                    describes where and when the story was written or filed though the
-                                                                                                                                                    date is often omitted. Sometimes only a placename is
-                                                                                                                                                    provided.Structured representations of dateline-related information
-                                                                                                                                                    can also be expressed more explicitly using locationCreated (which
-                                                                                                                                                    represents where a work was created e.g. where a news report was
-                                                                                                                                                    written). For location depicted or described in the content, use
-                                                                                                                                                    contentLocation.Dateline summaries are oriented more towards human
-                                                                                                                                                    readers than towards automated processing, and can vary substantially.
-                                                                                                                                                    Some examples: "BEIRUT, Lebanon, June 2.", "Paris, France", "December
-                                                                                                                                                    19, 2017 11:43AM Reporting from Washington", "Beijing/Moscow", "QUEZON
-                                                                                                                                                    CITY, Philippines".</td>
-</tr>
-<tr class="property">
-<td class="name"><code>$printColumn</code></td>
-<td class="type"><code>string</code></td>
-<td class="description">The number of the column in which the NewsArticle appears in the print
-                                                                                                                                                    edition.</td>
-</tr>
-<tr class="property">
-<td class="name"><code>$printEdition</code></td>
-<td class="type"><code>string</code></td>
-<td class="description">The edition of the print product in which the NewsArticle appears.</td>
-</tr>
-<tr class="property">
-<td class="name"><code>$printPage</code></td>
-<td class="type"><code>string</code></td>
-<td class="description">If this NewsArticle appears in print, this field indicates the name of
-                                                                                                                                                    the page on which the article is found. Please note that this field is
-                                                                                                                                                    intended for the exact page name (e.g. A5, B18).</td>
-</tr>
-<tr class="property">
-<td class="name"><code>$printSection</code></td>
-<td class="type"><code>string</code></td>
-<td class="description">If this NewsArticle appears in print, this field indicates the print
-                                                                                                                                                    section in which the article appeared.</td>
+<td class="description">Wikidata ID. No equivalent.</td>
 </tr>
 </table>
 <span class="DocumentorLabel">Methods: </span>
