Update of classes and documentation of classes
Standardization of classes + generation of documetation

--- a/documentation/trql.APIHandler.class.php.html
+++ b/documentation/trql.APIHandler.class.php.html
@@ -35,8 +35,7 @@ table.properties tr.property td.description { width: 60%; }
 <section class="classes">
 <section class="class shadow">
 <span class="DocumentorLabel">Class: </span><span class="property classname"><code>APIHandler</code></span>
-<span class="DocumentorLabel">Description: </span><span class="property description">...</span>
-<span class="DocumentorLabel">Declaration: </span><span class="property declaration"><code>class APIHandler extends Thing</code></span>
+<span class="DocumentorLabel">Description: </span><span class="property description"></span>
 <span class="DocumentorLabel">Properties: </span>
 <table class="properties">
 <thead>
@@ -62,8 +61,6 @@ table.properties tr.property td.description { width: 60%; }
 <td class="description">Handler's class (e.g. 'portfolio' for handling 'portfolio' type of services</td>
 </tr>
 </table>
-<span class="DocumentorLabel">Methods: </span>
-<span class="property func"><code>__construct()</code></span>, 
-<span class="property func"><code>defaultResponse()</code></span></section> <!-- .class -->
+</section> <!-- .class -->
 </section> <!-- .classes -->
 </div> <!-- End of trql_documentor_DocumentorSourceFile-->
