--- a/documentation/trql.accommodation.class.php.html
+++ b/documentation/trql.accommodation.class.php.html
@@ -33,19 +33,7 @@ table.properties tr.property td.description { width: 60%; }
 <section class="classes">
 <section class="class shadow">
 <span class="DocumentorLabel">Class: </span><span class="property classname"><code>Accommodation</code></span>
-<span class="DocumentorLabel">Description: </span><span class="property description">An accommodation is a place that can accommodate human beings, e.g. a hotel 
-        room, a camping pitch, or a meeting room. Many accommodations are for overnight 
-        stays, but this is not a mandatory requirement.For more specific types of 
-        accommodations not defined in schema.org, one can use additionalType with 
-        external vocabularies.See also the dedicated document on the use of schema.org 
-        for marking up hotels and other forms of accommodations.</span>
-<span class="DocumentorLabel">Declaration: </span><span class="property declaration"><code>class Accommodation extends Place</code></span>
-<span class="DocumentorLabel">Credits: </span><span class="property credits">The whole concept is derived from the fabulous work of Schema.org
-        under the terms of their license:
-        <a href="http://schema.org/docs/terms.html" class="DocumentorLink" title="Go to http://schema.org/docs/terms.html" itemprop="url">http://schema.org/docs/terms.html</a></span>
-<span class="DocumentorLabel">Doc: </span><span class="property doc"><a href="http://schema.org/Accommodation" class="DocumentorLink" title="Go to http://schema.org/Accommodation" itemprop="url">http://schema.org/Accommodation</a></span>
-<span class="DocumentorLabel">Warning: </span><span class="property warning">This class has been generated automatically by <code>trql.schemaclassgenerator.class.php</code>
-        on 26-08-2020 08:24.</span>
+<span class="DocumentorLabel">Description: </span><span class="property description"></span>
 <span class="DocumentorLabel">Properties: </span>
 <table class="properties">
 <thead>
@@ -168,8 +156,6 @@ table.properties tr.property td.description { width: 60%; }
 <td class="description">Wikidata ID. Place where someone can stay</td>
 </tr>
 </table>
-<span class="DocumentorLabel">Methods: </span>
-<span class="property func"><code>__construct()</code></span>, 
-<span class="property func"><code>__destruct()</code></span></section> <!-- .class -->
+</section> <!-- .class -->
 </section> <!-- .classes -->
 </div> <!-- End of trql_documentor_DocumentorSourceFile-->
