--- a/documentation/trql.accountingservice.class.php.html
+++ b/documentation/trql.accountingservice.class.php.html
@@ -27,15 +27,7 @@ table.properties tr.property td.description { width: 60%; }
 <section class="classes">
 <section class="class shadow">
 <span class="DocumentorLabel">Class: </span><span class="property classname"><code>AccountingService</code></span>
-<span class="DocumentorLabel">Description: </span><span class="property description">Accountancy business.As a LocalBusiness it can be described as a provider of 
-        one or more Service(s).</span>
-<span class="DocumentorLabel">Declaration: </span><span class="property declaration"><code>class AccountingService extends FinancialService</code></span>
-<span class="DocumentorLabel">Credits: </span><span class="property credits">The whole concept is derived from the fabulous work of Schema.org
-        under the terms of their license:
-        <a href="http://schema.org/docs/terms.html" class="DocumentorLink" title="Go to http://schema.org/docs/terms.html" itemprop="url">http://schema.org/docs/terms.html</a></span>
-<span class="DocumentorLabel">Doc: </span><span class="property doc"><a href="http://schema.org/AccountingService" class="DocumentorLink" title="Go to http://schema.org/AccountingService" itemprop="url">http://schema.org/AccountingService</a></span>
-<span class="DocumentorLabel">Warning: </span><span class="property warning">This class has been generated automatically by <code>trql.schemaclassgenerator.class.php</code>
-        on 26-08-2020 09:15.</span>
+<span class="DocumentorLabel">Description: </span><span class="property description"></span>
 <span class="DocumentorLabel">Properties: </span>
 <table class="properties">
 <thead>
@@ -62,8 +54,6 @@ table.properties tr.property td.description { width: 60%; }
 <td class="description">Wikidata ID. Service of providing accounting activity to others</td>
 </tr>
 </table>
-<span class="DocumentorLabel">Methods: </span>
-<span class="property func"><code>__construct()</code></span>, 
-<span class="property func"><code>__destruct()</code></span></section> <!-- .class -->
+</section> <!-- .class -->
 </section> <!-- .classes -->
 </div> <!-- End of trql_documentor_DocumentorSourceFile-->
