--- a/documentation/trql.action.class.php.html
+++ b/documentation/trql.action.class.php.html
@@ -32,16 +32,7 @@ table.properties tr.property td.description { width: 60%; }
 <section class="classes">
 <section class="class shadow">
 <span class="DocumentorLabel">Class: </span><span class="property classname"><code>Action</code></span>
-<span class="DocumentorLabel">Description: </span><span class="property description">An action performed by a direct agent and indirect participants upon a direct 
-        object. Optionally happens at a location with the help of an inanimate 
-        instrument. The execution of the action may produce a result. Specific action 
-        sub-type documentation specifies the exact expectation of each 
-        argument/role. See also blog post and Actions overview document.</span>
-<span class="DocumentorLabel">Declaration: </span><span class="property declaration"><code>class Action extends Thing</code></span>
-<span class="DocumentorLabel">Credits: </span><span class="property credits">The whole concept is derived from the fabulous work of Schema.org
-        under the terms of their license:
-        <a href="http://schema.org/docs/terms.html" class="DocumentorLink" title="Go to http://schema.org/docs/terms.html" itemprop="url">http://schema.org/docs/terms.html</a></span>
-<span class="DocumentorLabel">Doc: </span><span class="property doc"><a href="http://schema.org/Action" class="DocumentorLink" title="Go to http://schema.org/Action" itemprop="url">http://schema.org/Action</a></span>
+<span class="DocumentorLabel">Description: </span><span class="property description"></span>
 <span class="DocumentorLabel">Properties: </span>
 <table class="properties">
 <thead>
@@ -147,8 +138,6 @@ table.properties tr.property td.description { width: 60%; }
                                                                                                                                                                     prioritisation, prioritising</td>
 </tr>
 </table>
-<span class="DocumentorLabel">Methods: </span>
-<span class="property func"><code>__construct()</code></span>, 
-<span class="property func"><code>__destruct()</code></span></section> <!-- .class -->
+</section> <!-- .class -->
 </section> <!-- .classes -->
 </div> <!-- End of trql_documentor_DocumentorSourceFile-->
