--- a/documentation/trql.advertisercontentarticle.class.php.html
+++ b/documentation/trql.advertisercontentarticle.class.php.html
@@ -29,16 +29,7 @@ table.properties tr.property td.description { width: 60%; }
 <section class="classes">
 <section class="class shadow">
 <span class="DocumentorLabel">Class: </span><span class="property classname"><code>AdvertiserContentArticle</code></span>
-<span class="DocumentorLabel">Description: </span><span class="property description">An Article that an external entity has paid to place or to produce to its
-        specifications. Includes advertorials, sponsored content, native advertising
-        and other paid content.</span>
-<span class="DocumentorLabel">Declaration: </span><span class="property declaration"><code>class AdvertiserContentArticle extends Article</code></span>
-<span class="DocumentorLabel">Credits: </span><span class="property credits">The whole concept is derived from the fabulous work of Schema.org
-        under the terms of their license:
-        <a href="http://schema.org/docs/terms.html" class="DocumentorLink" title="Go to http://schema.org/docs/terms.html" itemprop="url">http://schema.org/docs/terms.html</a></span>
-<span class="DocumentorLabel">Doc: </span><span class="property doc"><a href="http://schema.org/AdvertiserContentArticle" class="DocumentorLink" title="Go to http://schema.org/AdvertiserContentArticle" itemprop="url">http://schema.org/AdvertiserContentArticle</a></span>
-<span class="DocumentorLabel">Warning: </span><span class="property warning">This class has been generated automatically by <code>trql.schemaclassgenerator.class.php</code>
-        on 26-08-2020 09:44.</span>
+<span class="DocumentorLabel">Description: </span><span class="property description"></span>
 <span class="DocumentorLabel">Properties: </span>
 <table class="properties">
 <thead>
@@ -59,8 +50,6 @@ table.properties tr.property td.description { width: 60%; }
 <td class="description">Wikidata ID. No equivalent.</td>
 </tr>
 </table>
-<span class="DocumentorLabel">Methods: </span>
-<span class="property func"><code>__construct()</code></span>, 
-<span class="property func"><code>__destruct()</code></span></section> <!-- .class -->
+</section> <!-- .class -->
 </section> <!-- .classes -->
 </div> <!-- End of trql_documentor_DocumentorSourceFile-->
