--- a/documentation/trql.aggregateoffer.class.php.html
+++ b/documentation/trql.aggregateoffer.class.php.html
@@ -33,19 +33,7 @@ table.properties tr.property td.description { width: 60%; }
 <section class="classes">
 <section class="class shadow">
 <span class="DocumentorLabel">Class: </span><span class="property classname"><code>AggregateOffer</code></span>
-<span class="DocumentorLabel">Description: </span><span class="property description">When a single product is associated with multiple offers (for example, the same 
-        pair of shoes is offered by different merchants), then AggregateOffer can be 
-        used. Note: AggregateOffers are normally expected to associate multiple offers 
-        that all share the same defined businessFunction value, or default to 
-        http://purl.org/goodrelations/v1#Sell if businessFunction is not explicitly 
-        defined.</span>
-<span class="DocumentorLabel">Declaration: </span><span class="property declaration"><code>class AggregateOffer extends Offer</code></span>
-<span class="DocumentorLabel">Credits: </span><span class="property credits">The whole concept is derived from the fabulous work of Schema.org
-        under the terms of their license:
-        <a href="http://schema.org/docs/terms.html" class="DocumentorLink" title="Go to http://schema.org/docs/terms.html" itemprop="url">http://schema.org/docs/terms.html</a></span>
-<span class="DocumentorLabel">Doc: </span><span class="property doc"><a href="http://schema.org/AggregateOffer" class="DocumentorLink" title="Go to http://schema.org/AggregateOffer" itemprop="url">http://schema.org/AggregateOffer</a></span>
-<span class="DocumentorLabel">Warning: </span><span class="property warning">This class has been generated automatically by <code>trql.schemaclassgenerator.class.php</code>
-        on 26-08-2020 09:44.</span>
+<span class="DocumentorLabel">Description: </span><span class="property description"></span>
 <span class="DocumentorLabel">Properties: </span>
 <table class="properties">
 <thead>
@@ -101,8 +89,6 @@ table.properties tr.property td.description { width: 60%; }
 <td class="description">Wikidata ID. No equivalent.</td>
 </tr>
 </table>
-<span class="DocumentorLabel">Methods: </span>
-<span class="property func"><code>__construct()</code></span>, 
-<span class="property func"><code>__destruct()</code></span></section> <!-- .class -->
+</section> <!-- .class -->
 </section> <!-- .classes -->
 </div> <!-- End of trql_documentor_DocumentorSourceFile-->
