--- a/documentation/trql.agreeaction.class.php.html
+++ b/documentation/trql.agreeaction.class.php.html
@@ -28,15 +28,7 @@ table.properties tr.property td.description { width: 60%; }
 <section class="classes">
 <section class="class shadow">
 <span class="DocumentorLabel">Class: </span><span class="property classname"><code>AgreeAction</code></span>
-<span class="DocumentorLabel">Description: </span><span class="property description">The act of expressing a consistency of opinion with the object. An agent agrees 
-        to/about an object (a proposition, topic or theme) with participants.</span>
-<span class="DocumentorLabel">Declaration: </span><span class="property declaration"><code>class AgreeAction extends ReactAction</code></span>
-<span class="DocumentorLabel">Credits: </span><span class="property credits">The whole concept is derived from the fabulous work of Schema.org
-        under the terms of their license:
-        <a href="http://schema.org/docs/terms.html" class="DocumentorLink" title="Go to http://schema.org/docs/terms.html" itemprop="url">http://schema.org/docs/terms.html</a></span>
-<span class="DocumentorLabel">Doc: </span><span class="property doc"><a href="http://schema.org/AgreeAction" class="DocumentorLink" title="Go to http://schema.org/AgreeAction" itemprop="url">http://schema.org/AgreeAction</a></span>
-<span class="DocumentorLabel">Warning: </span><span class="property warning">This class has been generated automatically by <code>trql.schemaclassgenerator.class.php</code>
-        on 26-08-2020 14:33.</span>
+<span class="DocumentorLabel">Description: </span><span class="property description"></span>
 <span class="DocumentorLabel">Properties: </span>
 <table class="properties">
 <thead>
@@ -52,8 +44,6 @@ table.properties tr.property td.description { width: 60%; }
 <td class="description">Fixed 'class' information.</td>
 </tr>
 </table>
-<span class="DocumentorLabel">Methods: </span>
-<span class="property func"><code>__construct()</code></span>, 
-<span class="property func"><code>__destruct()</code></span></section> <!-- .class -->
+</section> <!-- .class -->
 </section> <!-- .classes -->
 </div> <!-- End of trql_documentor_DocumentorSourceFile-->
