--- a/documentation/trql.amusementpark.class.php.html
+++ b/documentation/trql.amusementpark.class.php.html
@@ -26,14 +26,7 @@ table.properties tr.property td.description { width: 60%; }
 <section class="classes">
 <section class="class shadow">
 <span class="DocumentorLabel">Class: </span><span class="property classname"><code>AmusementPark</code></span>
-<span class="DocumentorLabel">Description: </span><span class="property description">An amusement park.</span>
-<span class="DocumentorLabel">Declaration: </span><span class="property declaration"><code>class AmusementPark extends EntertainmentBusiness</code></span>
-<span class="DocumentorLabel">Credits: </span><span class="property credits">The whole concept is derived from the fabulous work of Schema.org
-        under the terms of their license:
-        <a href="http://schema.org/docs/terms.html" class="DocumentorLink" title="Go to http://schema.org/docs/terms.html" itemprop="url">http://schema.org/docs/terms.html</a></span>
-<span class="DocumentorLabel">Doc: </span><span class="property doc"><a href="http://schema.org/AmusementPark" class="DocumentorLink" title="Go to http://schema.org/AmusementPark" itemprop="url">http://schema.org/AmusementPark</a></span>
-<span class="DocumentorLabel">Warning: </span><span class="property warning">This class has been generated automatically by <code>trql.schemaclassgenerator.class.php</code>
-        on 26-08-2020 14:41. IT HAS NOT BEEN TESTED YET!</span>
+<span class="DocumentorLabel">Description: </span><span class="property description"></span>
 <span class="DocumentorLabel">Properties: </span>
 <table class="properties">
 <thead>
@@ -54,8 +47,6 @@ table.properties tr.property td.description { width: 60%; }
 <td class="description">Wikidata ID. Park with rides and attractions</td>
 </tr>
 </table>
-<span class="DocumentorLabel">Methods: </span>
-<span class="property func"><code>__construct()</code></span>, 
-<span class="property func"><code>__destruct()</code></span></section> <!-- .class -->
+</section> <!-- .class -->
 </section> <!-- .classes -->
 </div> <!-- End of trql_documentor_DocumentorSourceFile-->
