--- a/documentation/trql.accountingregister.class.php.html
+++ b/documentation/trql.accountingregister.class.php.html
@@ -26,8 +26,7 @@ table.properties tr.property td.description { width: 60%; }
 <section class="classes">
 <section class="class shadow">
 <span class="DocumentorLabel">Class: </span><span class="property classname"><code>AccountingRegister</code></span>
-<span class="DocumentorLabel">Description: </span><span class="property description">Document used for bookkeeping or accounting</span>
-<span class="DocumentorLabel">Declaration: </span><span class="property declaration"><code>class AccountingRegister extends Document</code></span>
+<span class="DocumentorLabel">Description: </span><span class="property description"></span>
 <span class="DocumentorLabel">Properties: </span>
 <table class="properties">
 <thead>
@@ -49,8 +48,6 @@ table.properties tr.property td.description { width: 60%; }
                                                                                                                                                     accounting</td>
 </tr>
 </table>
-<span class="DocumentorLabel">Methods: </span>
-<span class="property func"><code>__construct()</code></span>, 
-<span class="property func"><code>__destruct()</code></span></section> <!-- .class -->
+</section> <!-- .class -->
 </section> <!-- .classes -->
 </div> <!-- End of trql_documentor_DocumentorSourceFile-->
