--- a/documentation/trql.achieveaction.class.php.html
+++ b/documentation/trql.achieveaction.class.php.html
@@ -28,15 +28,7 @@ table.properties tr.property td.description { width: 60%; }
 <section class="classes">
 <section class="class shadow">
 <span class="DocumentorLabel">Class: </span><span class="property classname"><code>AchieveAction</code></span>
-<span class="DocumentorLabel">Description: </span><span class="property description">The act of accomplishing something via previous efforts. It is an instantaneous 
-        action rather than an ongoing process.</span>
-<span class="DocumentorLabel">Declaration: </span><span class="property declaration"><code>class AchieveAction extends Action</code></span>
-<span class="DocumentorLabel">Credits: </span><span class="property credits">The whole concept is derived from the fabulous work of Schema.org
-        under the terms of their license:
-        <a href="http://schema.org/docs/terms.html" class="DocumentorLink" title="Go to http://schema.org/docs/terms.html" itemprop="url">http://schema.org/docs/terms.html</a></span>
-<span class="DocumentorLabel">Doc: </span><span class="property doc"><a href="http://schema.org/AchieveAction" class="DocumentorLink" title="Go to http://schema.org/AchieveAction" itemprop="url">http://schema.org/AchieveAction</a></span>
-<span class="DocumentorLabel">Warning: </span><span class="property warning">This class has been generated automatically by <code>trql.schemaclassgenerator.class.php</code>
-        on 26-08-2020 09:15.</span>
+<span class="DocumentorLabel">Description: </span><span class="property description"></span>
 <span class="DocumentorLabel">Properties: </span>
 <table class="properties">
 <thead>
@@ -57,8 +49,6 @@ table.properties tr.property td.description { width: 60%; }
 <td class="description">Wikidata ID. No equivalent.</td>
 </tr>
 </table>
-<span class="DocumentorLabel">Methods: </span>
-<span class="property func"><code>__construct()</code></span>, 
-<span class="property func"><code>__destruct()</code></span></section> <!-- .class -->
+</section> <!-- .class -->
 </section> <!-- .classes -->
 </div> <!-- End of trql_documentor_DocumentorSourceFile-->
