--- a/documentation/trql.activateaction.class.php.html
+++ b/documentation/trql.activateaction.class.php.html
@@ -27,15 +27,7 @@ table.properties tr.property td.description { width: 60%; }
 <section class="classes">
 <section class="class shadow">
 <span class="DocumentorLabel">Class: </span><span class="property classname"><code>ActivateAction</code></span>
-<span class="DocumentorLabel">Description: </span><span class="property description">The act of starting or activating a device or application (e.g. starting a 
-        timer or turning on a flashlight).</span>
-<span class="DocumentorLabel">Declaration: </span><span class="property declaration"><code>class ActivateAction extends ControlAction</code></span>
-<span class="DocumentorLabel">Credits: </span><span class="property credits">The whole concept is derived from the fabulous work of Schema.org
-        under the terms of their license:
-        <a href="http://schema.org/docs/terms.html" class="DocumentorLink" title="Go to http://schema.org/docs/terms.html" itemprop="url">http://schema.org/docs/terms.html</a></span>
-<span class="DocumentorLabel">Doc: </span><span class="property doc"><a href="http://schema.org/ActivateAction" class="DocumentorLink" title="Go to http://schema.org/ActivateAction" itemprop="url">http://schema.org/ActivateAction</a></span>
-<span class="DocumentorLabel">Warning: </span><span class="property warning">This class has been generated automatically by <code>trql.schemaclassgenerator.class.php</code>
-        on 26-08-2020 08:25. IT HAS NOT BEEN TESTED YET!</span>
+<span class="DocumentorLabel">Description: </span><span class="property description"></span>
 <span class="DocumentorLabel">Properties: </span>
 <table class="properties">
 <thead>
@@ -56,8 +48,6 @@ table.properties tr.property td.description { width: 60%; }
 <td class="description">Wikidata ID. No equivalent.</td>
 </tr>
 </table>
-<span class="DocumentorLabel">Methods: </span>
-<span class="property func"><code>__construct()</code></span>, 
-<span class="property func"><code>__destruct()</code></span></section> <!-- .class -->
+</section> <!-- .class -->
 </section> <!-- .classes -->
 </div> <!-- End of trql_documentor_DocumentorSourceFile-->
