--- a/documentation/trql.activity.class.php.html
+++ b/documentation/trql.activity.class.php.html
@@ -26,8 +26,7 @@ table.properties tr.property td.description { width: 60%; }
 <section class="classes">
 <section class="class shadow">
 <span class="DocumentorLabel">Class: </span><span class="property classname"><code>Activity</code></span>
-<span class="DocumentorLabel">Description: </span><span class="property description">Event; actions that result in changes of state.</span>
-<span class="DocumentorLabel">Declaration: </span><span class="property declaration"><code>class Activity extends Action</code></span>
+<span class="DocumentorLabel">Description: </span><span class="property description"></span>
 <span class="DocumentorLabel">Properties: </span>
 <table class="properties">
 <thead>
@@ -48,9 +47,6 @@ table.properties tr.property td.description { width: 60%; }
 <td class="description">Event; actions that result in changes of state.</td>
 </tr>
 </table>
-<span class="DocumentorLabel">Methods: </span>
-<span class="property func"><code>__construct()</code></span>, 
-<span class="property func"><code>__toXML()</code></span>, 
-<span class="property func"><code>__destruct()</code></span></section> <!-- .class -->
+</section> <!-- .class -->
 </section> <!-- .classes -->
 </div> <!-- End of trql_documentor_DocumentorSourceFile-->
