--- a/documentation/trql.administrativearea.class.php.html
+++ b/documentation/trql.administrativearea.class.php.html
@@ -26,12 +26,7 @@ table.properties tr.property td.description { width: 60%; }
 <section class="classes">
 <section class="class shadow">
 <span class="DocumentorLabel">Class: </span><span class="property classname"><code>AdministrativeArea</code></span>
-<span class="DocumentorLabel">Description: </span><span class="property description">A geographical region, typically under the jurisdiction of a particular government.</span>
-<span class="DocumentorLabel">Declaration: </span><span class="property declaration"><code>class AdministrativeArea extends Place implements iContext</code></span>
-<span class="DocumentorLabel">Credits: </span><span class="property credits">The whole concept is derived from the fabulous work of Schema.org
-        under the terms of their license:
-        <a href="http://schema.org/docs/terms.html" class="DocumentorLink" title="Go to http://schema.org/docs/terms.html" itemprop="url">http://schema.org/docs/terms.html</a></span>
-<span class="DocumentorLabel">Doc: </span><span class="property doc"><a href="https://schema.org/AdministrativeArea" class="DocumentorLink" title="Go to https://schema.org/AdministrativeArea" itemprop="url">https://schema.org/AdministrativeArea</a></span>
+<span class="DocumentorLabel">Description: </span><span class="property description"></span>
 <span class="DocumentorLabel">Properties: </span>
 <table class="properties">
 <thead>
@@ -47,10 +42,6 @@ table.properties tr.property td.description { width: 60%; }
 <td class="description">Fixed 'class' information.</td>
 </tr>
 </table>
-<span class="DocumentorLabel">Methods: </span>
-<span class="property func"><code>__construct()</code></span>, 
-<span class="property func"><code>speak()</code></span>, 
-<span class="property func"><code>sing()</code></span>, 
-<span class="property func"><code>__destruct()</code></span></section> <!-- .class -->
+</section> <!-- .class -->
 </section> <!-- .classes -->
 </div> <!-- End of trql_documentor_DocumentorSourceFile-->
