--- a/documentation/trql.alignmentobject.class.php.html
+++ b/documentation/trql.alignmentobject.class.php.html
@@ -30,17 +30,7 @@ table.properties tr.property td.description { width: 60%; }
 <section class="classes">
 <section class="class shadow">
 <span class="DocumentorLabel">Class: </span><span class="property classname"><code>AlignmentObject</code></span>
-<span class="DocumentorLabel">Description: </span><span class="property description">An intangible item that describes an alignment between a learning resource and 
-        a node in an educational framework.Should not be used where the nature of the 
-        alignment can be described using a simple property, for example to express 
-        that a resource teaches or assesses a competency.</span>
-<span class="DocumentorLabel">Declaration: </span><span class="property declaration"><code>class AlignmentObject extends Intangible</code></span>
-<span class="DocumentorLabel">Credits: </span><span class="property credits">The whole concept is derived from the fabulous work of Schema.org
-        under the terms of their license:
-        <a href="http://schema.org/docs/terms.html" class="DocumentorLink" title="Go to http://schema.org/docs/terms.html" itemprop="url">http://schema.org/docs/terms.html</a></span>
-<span class="DocumentorLabel">Doc: </span><span class="property doc"><a href="http://schema.org/AlignmentObject" class="DocumentorLink" title="Go to http://schema.org/AlignmentObject" itemprop="url">http://schema.org/AlignmentObject</a></span>
-<span class="DocumentorLabel">Warning: </span><span class="property warning">This class has been generated automatically by <code>trql.schemaclassgenerator.class.php</code>
-        on 26-08-2020 14:41.</span>
+<span class="DocumentorLabel">Description: </span><span class="property description"></span>
 <span class="DocumentorLabel">Properties: </span>
 <table class="properties">
 <thead>
@@ -88,8 +78,6 @@ table.properties tr.property td.description { width: 60%; }
 <td class="description">Wikidata ID. No equivalent.</td>
 </tr>
 </table>
-<span class="DocumentorLabel">Methods: </span>
-<span class="property func"><code>__construct()</code></span>, 
-<span class="property func"><code>__destruct()</code></span></section> <!-- .class -->
+</section> <!-- .class -->
 </section> <!-- .classes -->
 </div> <!-- End of trql_documentor_DocumentorSourceFile-->
