--- a/documentation/trql.tazieff.class.php.html
+++ b/documentation/trql.tazieff.class.php.html
@@ -6,7 +6,7 @@ code, .filename { color: crimson; font-family: Consolas,"courier new" }
 .DocumentorLabel { font-style: italic; display: block;}
 section.class { margin: 1em 1em; padding: 1em; border: 1px solid #000; background: #eee9; }
 .shadow { box-shadow: 0 20px 15px -15px rgba(0,0,0,.5); }
-table.properties { border:1px solid silver; border-collapse: collapse; }
+table.properties { border:1px solid silver; border-collapse: collapse; width:100%; }
 table.properties thead th { border:1px solid silver;padding: .5em; width:20%; }
 table.properties thead th.description { width:60%; }
 table.properties tr.property td { border:1px solid silver;padding: .5em; width:20%; }
@@ -20,22 +20,13 @@ table.properties tr.property td.description { width: 60%; }
 <span class="DocumentorLabel">Author: </span><span class="property author">Pat Y. Boens</span>
 <span class="DocumentorLabel">Company: </span><span class="property company">Lato Sensu Management<br />Rue du Bois des Mazuis, 47<br />5070 Vitrival<br />Belgium<br /><a href="https://www.latosensu.be" class="DocumentorLink" title="Go to https://www.latosensu.be" itemprop="url">https://www.latosensu.be</a> (geonames: <a href="http://api.geonames.org/get?geonameId=8520400&username=demo&style=full" class="DocumentorLink" title="Go to http://api.geonames.org/get?geonameId=8520400&username=demo&style=full" itemprop="url">http://api.geonames.org/get?geonameId=8520400&username=demo&style=full</a>)<br />Vae Soli!: <a href="http://www.vaesoli.com" class="DocumentorLink" title="Go to http://www.vaesoli.com" itemprop="url">http://www.vaesoli.com</a><br /></span>
 <span class="DocumentorLabel">Creation date: </span><span class="property cdate">28-07-20 23:53</span>
-<span class="DocumentorLabel">Last modification date: </span><span class="property mdate">14/02/2021 - 09:04:12</span>
+<span class="DocumentorLabel">Last modification date: </span><span class="property mdate">28/02/2021 - 17:28:41</span>
 <span class="DocumentorLabel">License/Copyrights: </span><span class="property license">Intellectual Property belongs to Pat Y. Boens. You are free to:<br /><strong>Share</strong> — copy and redistribute the material in any medium or format<br /><strong>Adapt</strong> — remix, transform, and build upon the material for any purpose, even commercially.<br />Under the following terms:<br /><strong>Attribution</strong> — You must give appropriate credit, provide a link to the license, and indicate if changes were made. You may do so in any reasonable manner, but not in any way that suggests the licensor endorses you or your use.<br /><strong>No additional restrictions</strong> — You may not apply legal terms or technological measures that legally restrict others from doing anything the license permits.<br /><br /><a href="https://creativecommons.org/licenses/by/4.0/legalcode" class="DocumentorLink" title="Go to https://creativecommons.org/licenses/by/4.0/legalcode" itemprop="url">https://creativecommons.org/licenses/by/4.0/legalcode</a></span>
 </section> <!-- .header -->
 <section class="classes">
 <section class="class shadow">
 <span class="DocumentorLabel">Class: </span><span class="property classname"><code>Tazieff</code></span>
-<span class="DocumentorLabel">Description: </span><span class="property description">Access to earthquake information.
-
-        The class has been named "Tazieff" in honor of Haroun Tazieff, Warsaw,
-        11 May 1914 – Paris, 2 February 1998, who was a Polish, Belgian and
-        French volcanologist and geologist. He was a famous cinematographer of
-        volcanic eruptions and lava flows, and the author of several books on
-        volcanoes. He was also a government adviser and Cabinet minister.</span>
-<span class="DocumentorLabel">Declaration: </span><span class="property declaration"><code>class Tazieff extends Utility implements iContext</code></span>
-<span class="DocumentorLabel">Doc: </span><span class="property doc"><a href="https://earthquake.usgs.gov/" class="DocumentorLink" title="Go to https://earthquake.usgs.gov/" itemprop="url">https://earthquake.usgs.gov/</a>
-        <a href="https://earthquake.usgs.gov/fdsnws/event/1/#methods" class="DocumentorLink" title="Go to https://earthquake.usgs.gov/fdsnws/event/1/#methods" itemprop="url">https://earthquake.usgs.gov/fdsnws/event/1/#methods</a></span>
+<span class="DocumentorLabel">Description: </span><span class="property description"></span>
 <span class="DocumentorLabel">Properties: </span>
 <table class="properties">
 <thead>
@@ -50,10 +41,12 @@ table.properties tr.property td.description { width: 60%; }
 <td class="type"><code>array</code></td>
 <td class="description">Fixed 'class' information.</td>
 </tr>
+<tr class="property">
+<td class="name"><code>$wikidataId</code></td>
+<td class="type"><code>string</code></td>
+<td class="description">Wikidata ID. No equivalent.</td>
+</tr>
 </table>
-<span class="DocumentorLabel">Methods: </span>
-<span class="property func"><code>__construct()</code></span>, 
-<span class="property func"><code>parse()</code></span>, 
-<span class="property func"><code>call()</code></span></section> <!-- .class -->
+</section> <!-- .class -->
 </section> <!-- .classes -->
 </div> <!-- End of trql_documentor_DocumentorSourceFile-->
