--- a/documentation/trql.browser.class.php.html
+++ b/documentation/trql.browser.class.php.html
@@ -50,15 +50,15 @@ p.property.func { font: .9em/1em lucida,georgia,"times new roman",serif;
 <span class="DocumentorLabel">Author: </span><span class="property author">Pat Y. Boens</span>
 <span class="DocumentorLabel">Company: </span><span class="property company">Lato Sensu Management<br />Rue du Bois des Mazuis, 47<br />5070 Vitrival<br />Belgium<br /><a href="https://www.latosensu.be" class="DocumentorLink" title="Go to https://www.latosensu.be" itemprop="url">https://www.latosensu.be</a> (geonames: <a href="http://api.geonames.org/get?geonameId=8520400&username=demo&style=full" class="DocumentorLink" title="Go to http://api.geonames.org/get?geonameId=8520400&username=demo&style=full" itemprop="url">http://api.geonames.org/get?geonameId=8520400&username=demo&style=full</a>)<br />Vae Soli!: <a href="http://www.vaesoli.com" class="DocumentorLink" title="Go to http://www.vaesoli.com" itemprop="url">http://www.vaesoli.com</a><br /></span>
 <span class="DocumentorLabel">Creation date: </span><span class="property cdate">24/06/2012 - 11:25</span>
-<span class="DocumentorLabel">Last modification date: </span><span class="property mdate">10/03/2021 - 08:41:25</span>
-<span class="DocumentorLabel">License/Copyrights: </span><span class="property license">Intellectual Property belongs to Pat Y. Boens. You are free to:<br /><strong>Share</strong> — copy and redistribute the material in any medium or format<br /><strong>Adapt</strong> — remix, transform, and build upon the material for any purpose, even commercially.<br />Under the following terms:<br /><strong>Attribution</strong> — You must give appropriate credit, provide a link to the license, and indicate if changes were made. You may do so in any reasonable manner, but not in any way that suggests the licensor endorses you or your use.<br /><strong>No additional restrictions</strong> — You may not apply legal terms or technological measures that legally restrict others from doing anything the license permits.<br /><br /><a href="https://creativecommons.org/licenses/by/4.0/legalcode" class="DocumentorLink" title="Go to https://creativecommons.org/licenses/by/4.0/legalcode" itemprop="url">https://creativecommons.org/licenses/by/4.0/legalcode</a></span>
+<span class="DocumentorLabel">Last modification date: </span><span class="property mdate">11/03/2021 - 14:55:35</span>
+<span class="DocumentorLabel">License/Copyrights: </span><span class="property license">Intellectual Property belongs to Pat Y. Boens. You are free to:<br /><br /><strong>Share</strong> — copy and redistribute the material in any medium or format<br /><strong>Adapt</strong> — remix, transform, and build upon the material for any purpose, even commercially.<br /><br />Under the following terms:<br /><br /><strong>Attribution</strong> — You must give appropriate credit, provide a link to the license, and indicate if changes were made. You may do so in any reasonable manner, but not in any way that suggests the licensor endorses you or your use.<br /><br /><strong>No additional restrictions</strong> — You may not apply legal terms or technological measures that legally restrict others from doing anything the license permits.<br /><br /><a href="https://creativecommons.org/licenses/by/4.0/legalcode" class="DocumentorLink" title="Go to https://creativecommons.org/licenses/by/4.0/legalcode" itemprop="url">https://creativecommons.org/licenses/by/4.0/legalcode</a></span>
 </section> <!-- .header -->
 <section class="classes">
 <section class="class shadow">
 <span class="DocumentorLabel">Class: </span><span class="property classname"><code>Browser</code></span>
 <span class="DocumentorLabel">Description: </span><span class="property description">Navigator/Browser. Comes with an extensive set of parsing routines
  based on more than 15000 User Agents.</span>
-<span class="DocumentorLabel">Inheritance: </span><span class="property inheritance"><code><a href="/?src=Mother">Mother</a> &gt; <a href="/?src=Thing">Thing</a> &gt; Browser</code></span>
+<span class="DocumentorLabel">Inheritance: </span><span class="property inheritance"><code><a href="?src=Mother">Mother</a> &gt; <a href="?src=Thing">Thing</a> &gt; Browser</code></span>
 <span class="DocumentorLabel">Declaration: </span><span class="property declaration"><code>class Browser extends Thing</code></span>
 <span class="DocumentorLabel">Keywords: </span><span class="property keywords">constructors, destructors</span>
 <span class="DocumentorLabel">Properties: </span>
@@ -167,7 +167,7 @@ p.property.func { font: .9em/1em lucida,georgia,"times new roman",serif;
 <tr class="property">
 <td class="name" id="var.mainEntityOfPage"><code>$mainEntityOfPage</code></td>
 <td class="type"><code>string</code></td>
-<td class="description">Indicates a page (or other <code><a href="/?src=CreativeWork">CreativeWork</a></code>, <code><a href="/?src=Event">Event</a></code>)
+<td class="description">Indicates a page (or other <code><a href="?src=CreativeWork">CreativeWork</a></code>, <code><a href="?src=Event">Event</a></code>)
  for which this thing is the main entity
  being described. See <a
  href="https://schema.org/docs/datamodel.html#mainEntityBackground">
@@ -182,7 +182,7 @@ p.property.func { font: .9em/1em lucida,georgia,"times new roman",serif;
 <tr class="property">
 <td class="name" id="var.potentialAction"><code>$potentialAction</code></td>
 <td class="type"><code>Action</code></td>
-<td class="description">Indicates a potential <code><a href="/?src=Action">Action</a></code>, which
+<td class="description">Indicates a potential <code><a href="?src=Action">Action</a></code>, which
  describes an idealized action in which
  this thing would play an 'object' role.</td>
 </tr>
@@ -203,7 +203,7 @@ p.property.func { font: .9em/1em lucida,georgia,"times new roman",serif;
 <tr class="property">
 <td class="name" id="var.subjectOf"><code>$subjectOf</code></td>
 <td class="type"><code>CreativeWork|Event</code></td>
-<td class="description">A <code><a href="/?src=CreativeWork">CreativeWork</a></code> or <code><a href="/?src=Event">Event</a></code> about this <code><a href="/?src=Thing">Thing</a></code>. 
+<td class="description">A <code><a href="?src=CreativeWork">CreativeWork</a></code> or <code><a href="?src=Event">Event</a></code> about this <code><a href="?src=Thing">Thing</a></code>. 
  Inverse property: <code><a href="#var-about">$about</a></code>.</td>
 </tr>
 <tr class="property">
@@ -278,13 +278,32 @@ p.property.func { font: .9em/1em lucida,georgia,"times new roman",serif;
 <p class="property">Keywords:</p>
 <p>constructors, destructors</p>
 <p class="property">Syntax:</p>
-<p><code>__construct()</code></p>
+<p><code>__construct( $szHome )</code></p>
+<span class="DocumentorLabel">Parameters: </span>
+<table class="properties">
+<thead>
+<tr>
+<th class="name">Name</th>
+<th class="type">Type</th>
+<th class="description">Description</th>
+</tr>
+</thead>
+<tr class="parameter">
+<td class="name" id="param.__construct.szHome"><code>$szHome</code></td>
+<td class="type"><code>string</code></td>
+<td class="description seealso">Home of the class. Optional.</td>
+</tr>
+</table>
+<p class="property return">Return:</p>
+<p class="seealso">(self):  The current instance of the class</p>
 <span class="DocumentorLabel">See also: </span><span class="property seealso"><code><a href="#fnc.__destruct">__destruct()</a></code></span>
 <hr /><p class="property func" id="fnc.__destruct"><span class="name"><strong><code>__destruct()</code></strong></span>: Class destructor</p>
 <p class="property">Keywords:</p>
 <p>constructors, destructors</p>
 <p class="property">Syntax:</p>
 <p><code>__destruct()</code></p>
+<p class="property return">Return:</p>
+<p class="seealso">(void):  No return</p>
 <span class="DocumentorLabel">See also: </span><span class="property seealso"><code><a href="#fnc.__construct">__construct()</a></code></span>
 <hr /><p class="property func" id="fnc.detectSpider"><span class="name"><strong><code>detectSpider()</code></strong></span>: Detects spiders (very basic algorithm)</p>
 <p class="property">Remark:</p>
@@ -292,24 +311,142 @@ p.property.func { font: .9em/1em lucida,georgia,"times new roman",serif;
  That's it!</p>
 <p class="property">Syntax:</p>
 <p><code>detectSpider()</code></p>
+<p class="property return">Return:</p>
+<p class="seealso">(self):  Returns self; @var.szType is updated</p>
 <hr /><p class="property func" id="fnc.getHost"><span class="name"><strong><code>getHost()</code></strong></span>: Determines the host name linked to an IP address</p>
 <p class="property">Remark:</p>
 <p>The GetHost() method only operates on bots</p>
 <p class="property">Syntax:</p>
-<p><code>getHost()</code></p>
+<p><code>getHost( $szIP )</code></p>
+<span class="DocumentorLabel">Parameters: </span>
+<table class="properties">
+<thead>
+<tr>
+<th class="name">Name</th>
+<th class="type">Type</th>
+<th class="description">Description</th>
+</tr>
+</thead>
+<tr class="parameter">
+<td class="name" id="param.getHost.szIP"><code>$szIP</code></td>
+<td class="type"><code>string</code></td>
+<td class="description seealso">IP address</td>
+</tr>
+</table>
+<p class="property return">Return:</p>
+<p class="seealso">(string):  The host name by address</p>
 <hr /><p class="property func" id="fnc.isReally"><span class="name"><strong><code>isReally()</code></strong></span>: Determines if $szIP corresponds to $szHost</p>
 <p class="property">Syntax:</p>
-<p><code>isReally()</code></p>
+<p><code>isReally( $szIP )</code></p>
+<span class="DocumentorLabel">Parameters: </span>
+<table class="properties">
+<thead>
+<tr>
+<th class="name">Name</th>
+<th class="type">Type</th>
+<th class="description">Description</th>
+</tr>
+</thead>
+<tr class="parameter">
+<td class="name" id="param.isReally.szName"><code>$szName</code></td>
+<td class="type"><code>string</code></td>
+<td class="description seealso">Bot name</td>
+</tr>
+<tr class="parameter">
+<td class="name" id="param.isReally.szHost"><code>$szHost</code></td>
+<td class="type"><code>string</code></td>
+<td class="description seealso">Host name to check</td>
+</tr>
+<tr class="parameter">
+<td class="name" id="param.isReally.szIP"><code>$szIP</code></td>
+<td class="type"><code>string</code></td>
+<td class="description seealso">IP address to check</td>
+</tr>
+</table>
+<p class="property return">Return:</p>
+<p class="seealso">(bool):  <code>true</code> is @param.szIP corresponds to @param.szHost; 
+ <code>false</code> if not.</p>
 <hr /><p class="property func" id="fnc.parseUA"><span class="name"><strong><code>parseUA()</code></strong></span>: Parses the User Agent string and places all findings in the properties
  of the object.</p>
 <p class="property">Syntax:</p>
-<p><code>parseUA()</code></p>
+<p><code>parseUA( $szUA )</code></p>
+<span class="DocumentorLabel">Parameters: </span>
+<table class="properties">
+<thead>
+<tr>
+<th class="name">Name</th>
+<th class="type">Type</th>
+<th class="description">Description</th>
+</tr>
+</thead>
+<tr class="parameter">
+<td class="name" id="param.parseUA.szUA"><code>$szUA</code></td>
+<td class="type"><code>string</code></td>
+<td class="description seealso">Optional User Agent. @var.szUA by default.</td>
+</tr>
+</table>
+<p class="property return">Return:</p>
+<p class="seealso">(void): </p>
 <hr /><p class="property func" id="fnc.Render"><span class="name"><strong><code>Render()</code></strong></span>: Renders the data grabbed by the Browser object</p>
 <p class="property">Syntax:</p>
-<p><code>Render()</code></p>
+<p><code>Render( $szType )</code></p>
+<span class="DocumentorLabel">Parameters: </span>
+<table class="properties">
+<thead>
+<tr>
+<th class="name">Name</th>
+<th class="type">Type</th>
+<th class="description">Description</th>
+</tr>
+</thead>
+<tr class="parameter">
+<td class="name" id="param.Render.szType"><code>$szType</code></td>
+<td class="type"><code>string</code></td>
+<td class="description seealso">Type of desired output. Optional. <code>null</code> by default, in which case the result is HTML markup. Can also be <code>XML</code>, which obviously returns XML markup</td>
+</tr>
+</table>
+<p class="property return">Return:</p>
+<p class="seealso">(string): </p>
+<hr /><p class="property func" id="fnc.setDefaultPropertiesBeforeParsing"><span class="name"><strong><code>setDefaultPropertiesBeforeParsing()</code></strong></span>: (Re)set internal properties before parsing UA</p>
+<p class="property">Syntax:</p>
+<p><code>setDefaultPropertiesBeforeParsing( $szUA )</code></p>
+<span class="DocumentorLabel">Parameters: </span>
+<table class="properties">
+<thead>
+<tr>
+<th class="name">Name</th>
+<th class="type">Type</th>
+<th class="description">Description</th>
+</tr>
+</thead>
+<tr class="parameter">
+<td class="name" id="param.setDefaultPropertiesBeforeParsing.szUA"><code>$szUA</code></td>
+<td class="type"><code>string</code></td>
+<td class="description seealso">User Agent to parse. Optional. <code>null</code> by default.</td>
+</tr>
+</table>
+<p class="property return">Return:</p>
+<p class="seealso">(self):  Returns self;</p>
 <hr /><p class="property func" id="fnc.setUA"><span class="name"><strong><code>setUA()</code></strong></span>: Sets the internal $szUA property</p>
 <p class="property">Syntax:</p>
-<p><code>setUA()</code></p>
+<p><code>setUA( $szUA )</code></p>
+<span class="DocumentorLabel">Parameters: </span>
+<table class="properties">
+<thead>
+<tr>
+<th class="name">Name</th>
+<th class="type">Type</th>
+<th class="description">Description</th>
+</tr>
+</thead>
+<tr class="parameter">
+<td class="name" id="param.setUA.szUA"><code>$szUA</code></td>
+<td class="type"><code>string</code></td>
+<td class="description seealso">User Agent</td>
+</tr>
+</table>
+<p class="property return">Return:</p>
+<p class="seealso">(self):  The current instance of the class</p>
 <p class="property">Example(s):</p>
 <pre>
 
@@ -347,7 +484,30 @@ p.property.func { font: .9em/1em lucida,georgia,"times new roman",serif;
   </pre>
 <hr /><p class="property func" id="fnc.version"><span class="name"><strong><code>version()</code></strong></span>: Detects User Agent version (handy in many cases ... but NOT all)</p>
 <p class="property">Syntax:</p>
-<p><code>version()</code></p>
+<p><code>version( $szModifiers )</code></p>
+<span class="DocumentorLabel">Parameters: </span>
+<table class="properties">
+<thead>
+<tr>
+<th class="name">Name</th>
+<th class="type">Type</th>
+<th class="description">Description</th>
+</tr>
+</thead>
+<tr class="parameter">
+<td class="name" id="param.version.szPattern"><code>$szPattern</code></td>
+<td class="type"><code>string</code></td>
+<td class="description seealso">The pattern to be examined. Optional. <code>null</code> by default.</td>
+</tr>
+<tr class="parameter">
+<td class="name" id="param.version.szModifiers"><code>$szModifiers</code></td>
+<td class="type"><code>string</code></td>
+<td class="description seealso">Regex modifiers. Optional. <code>si</code> by default.</td>
+</tr>
+</table>
+<p class="property return">Return:</p>
+<p class="seealso">(void):  No return; @var.iMajor, @var.iMinor and
+ @var.iRevision and @var.szBuild updated</p>
 <hr /></section> <!-- .class -->
 </section> <!-- .classes -->
 </div> <!-- End of trql_documentor_DocumentorSourceFile-->
